<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7592316401695950/8685245020"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, C6D90FEDCA2E50BFACEFDA3380DD4EA2" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:background="@drawable/widget_item_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/inset_ui"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/button_border_ui" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="12dp"
                    android:text="@string/your_searches"
                    android:textSize="20sp"
                    android:typeface="sans" >
                </TextView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/button_border_ui"
                        android:orientation="horizontal" >

                        <ImageButton
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:onClick="addSearch"
                            android:padding="7dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/plus" />

                        <ImageButton
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:onClick="removeSearch"
                            android:padding="7dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/minus" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/searches_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:listSelector="@drawable/search_item_default_inset" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/button_border_ui"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/finished_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="finished"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/finished"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/sources"
                android:textColor="#33b5e5"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="#33b5e5"
                android:textSize="16sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/within"
                android:textColor="#33b5e5"
                android:textSize="16sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_ui"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sources"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:onClick="sourcesClick"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/source_list"
                android:typeface="sans" />

            <Button
                android:id="@+id/location"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:onClick="locationClick"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/my_location"
                android:typeface="sans" />

            <Spinner
                android:id="@+id/within"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:spinnerMode="dialog"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>